tools/deployment/website/testing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biodiversity-website
  namespace: testing
spec:
  selector:
    matchLabels:
      app: biodiversity-website
  template:
    metadata:
      labels:
        app: biodiversity-website
    spec:
      containers:
        - name: biodiversity-website
          image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/biodiversity-website/testing:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: '50Mi'
              cpu: '100m'
            limits:
              memory: '200Mi'
              cpu: '400m'
