tools/deployment/website/testing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biodiversity-website-service
  namespace: testing
  labels:
    app: biodiversity-website
spec:
  selector:
    app: biodiversity-website
  type: ClusterIP
  ports:
    - name: node
      port: 80
      targetPort: 8080
