tools/deployment/website/testing/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'http'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: arbimon-api-ingress
  namespace: testing
  labels:
    app: arbimon
spec:
  rules:
    - host: dev.arbimon.org
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: biodiversity-api-service
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'http'
  name: arbimon-legacy-api-ingress
  namespace: testing
  labels:
    app: arbimon
spec:
  rules:
    - host: dev.arbimon.org
      http:
        paths:
          - path: /legacy-api
            pathType: Prefix
            backend:
              serviceName: arbimon-service
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'http'

    # Add http basic auth (user/password in bio-basic-auth-secrets)
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    nginx.ingress.kubernetes.io/auth-secret: bio-basic-auth-secrets
  name: arbimon-combined-ingress
  namespace: testing
  labels:
    app: arbimon
spec:
  rules:
  - host: dev.arbimon.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: biodiversity-website-service
          servicePort: 80
      - path: /auth0-login
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /logout
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /fonts
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /images
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /includes
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /project
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
